--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
 </head>
   <body class="bg-gray-900 text-white">
     <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
