--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.553.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai"
+    "@google/genai": "https://aistudiocdn.com/@google/genai",
+    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.5.6"
   }
 }
 </script>
